[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pybliss"
version = "2025.0"
description = "Python wrappers around BLISS graph canonicalization toolkit."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Kaushik Kulkarni", email = "kaushikcfd@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.19",
    "pytools>=2024.0",
]

[project.urls]
Homepage = "https://github.com/kaushikcfd/pybliss"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
